data/derived/fa15/progs/unify/prog1986.ml.out
Characters 161-174:
  in makeString l';;
     ^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
